# docs/Fawkes-OpenApi.json
@@ -205,7 +205,7 @@
         },
         "security": [
           {
-            "Bearer": [ ]
+            "Bearer": []
           }
         ]
       }
@@ -239,7 +239,7 @@
         },
         "security": [
           {
-            "Bearer": [ ]
+            "Bearer": []
           }
         ]
       }
@@ -292,7 +292,7 @@
         },
         "security": [
           {
-            "Bearer": [ ]
+            "Bearer": []
           }
         ]
       }
@@ -348,7 +348,7 @@
         },
         "security": [
           {
-            "Bearer": [ ]
+            "Bearer": []
           }
         ]
       }
@@ -405,7 +405,7 @@
         },
         "security": [
           {
-            "Bearer": [ ]
+            "Bearer": []
           }
         ]
       },
@@ -480,7 +480,7 @@
         },
         "security": [
           {
-            "Bearer": [ ]
+            "Bearer": []
           }
         ]
       }
@@ -545,7 +545,7 @@
         },
         "security": [
           {
-            "Bearer": [ ]
+            "Bearer": []
           }
         ]
       }
@@ -585,7 +585,7 @@
         },
         "security": [
           {
-            "Bearer": [ ]
+            "Bearer": []
           }
         ]
       }
@@ -650,7 +650,7 @@
         },
         "security": [
           {
-            "Bearer": [ ]
+            "Bearer": []
           }
         ]
       }
@@ -697,7 +697,7 @@
         },
         "security": [
           {
-            "Bearer": [ ]
+            "Bearer": []
           }
         ]
       },
@@ -745,7 +745,7 @@
         },
         "security": [
           {
-            "Bearer": [ ]
+            "Bearer": []
           }
         ]
       }
@@ -802,7 +802,7 @@
         },
         "security": [
           {
-            "Bearer": [ ]
+            "Bearer": []
           }
         ]
       }
@@ -876,7 +876,7 @@
         },
         "security": [
           {
-            "Bearer": [ ]
+            "Bearer": []
           }
         ]
       }
@@ -973,7 +973,7 @@
         },
         "security": [
           {
-            "Bearer": [ ]
+            "Bearer": []
           }
         ]
       },
@@ -1038,7 +1038,7 @@
         },
         "security": [
           {
-            "Bearer": [ ]
+            "Bearer": []
           }
         ]
       },
@@ -1066,7 +1066,7 @@
         },
         "security": [
           {
-            "Bearer": [ ]
+            "Bearer": []
           }
         ]
       }
@@ -1110,7 +1110,7 @@
         },
         "security": [
           {
-            "Bearer": [ ]
+            "Bearer": []
           }
         ]
       },
@@ -1163,7 +1163,7 @@
         },
         "security": [
           {
-            "Bearer": [ ]
+            "Bearer": []
           }
         ]
       }
@@ -1217,7 +1217,7 @@
         },
         "security": [
           {
-            "Bearer": [ ]
+            "Bearer": []
           }
         ]
       }
@@ -1264,7 +1264,7 @@
         },
         "security": [
           {
-            "Bearer": [ ]
+            "Bearer": []
           }
         ]
       }
@@ -1300,7 +1300,7 @@
         },
         "security": [
           {
-            "Bearer": [ ]
+            "Bearer": []
           }
         ]
       }
@@ -1347,7 +1347,7 @@
         },
         "security": [
           {
-            "Bearer": [ ]
+            "Bearer": []
           }
         ]
       },
@@ -1412,7 +1412,7 @@
         },
         "security": [
           {
-            "Bearer": [ ]
+            "Bearer": []
           }
         ]
       }
@@ -1737,12 +1737,16 @@
       },
       "Fawkes.Api.Controllers.DeviceManagementController.DeviceBase": {
         "required": [
+          "displayTheme",
           "displayType"
         ],
         "type": "object",
         "properties": {
           "displayType": {
             "$ref": "#/components/schemas/Fawkes.Api.Controllers.DeviceManagementController.DisplayType"
+          },
+          "displayTheme": {
+            "$ref": "#/components/schemas/Fawkes.Api.Controllers.DeviceManagementController.DisplayTheme"
           },
           "matchNo": {
             "type": "integer",
@@ -1752,6 +1756,14 @@
           }
         },
         "additionalProperties": false
+      },
+      "Fawkes.Api.Controllers.DeviceManagementController.DisplayTheme": {
+        "enum": [
+          "Light",
+          "Dark"
+        ],
+        "type": "string",
+        "description": "Specifies the theme for the device display."
       },
       "Fawkes.Api.Controllers.DeviceManagementController.DisplayType": {
         "enum": [
@@ -1763,6 +1775,7 @@
       },
       "Fawkes.Api.Controllers.DeviceManagementController.GetDeviceResponse": {
         "required": [
+          "displayTheme",
           "displayType",
           "id"
         ],
@@ -1770,6 +1783,9 @@
         "properties": {
           "displayType": {
             "$ref": "#/components/schemas/Fawkes.Api.Controllers.DeviceManagementController.DisplayType"
+          },
+          "displayTheme": {
+            "$ref": "#/components/schemas/Fawkes.Api.Controllers.DeviceManagementController.DisplayTheme"
           },
           "matchNo": {
             "type": "integer",
@@ -1787,12 +1803,16 @@
       },
       "Fawkes.Api.Controllers.DeviceManagementController.UpdateDeviceRequest": {
         "required": [
+          "displayTheme",
           "displayType"
         ],
         "type": "object",
         "properties": {
           "displayType": {
             "$ref": "#/components/schemas/Fawkes.Api.Controllers.DeviceManagementController.DisplayType"
+          },
+          "displayTheme": {
+            "$ref": "#/components/schemas/Fawkes.Api.Controllers.DeviceManagementController.DisplayTheme"
           },
           "matchNo": {
             "type": "integer",
@@ -1837,12 +1857,16 @@
       },
       "Fawkes.Api.Controllers.DisplayController.DisplayDataResponse": {
         "required": [
+          "displayTheme",
           "displayType"
         ],
         "type": "object",
         "properties": {
           "displayType": {
             "$ref": "#/components/schemas/Fawkes.Api.Controllers.DisplayController.DisplayType"
+          },
+          "displayTheme": {
+            "$ref": "#/components/schemas/Fawkes.Api.Controllers.DisplayController.DisplayTheme"
           },
           "targets": {
             "type": "array",
@@ -1851,10 +1875,24 @@
             },
             "description": "",
             "nullable": true
+          },
+          "leagueTablePositions": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/Fawkes.Api.Controllers.DisplayController.LeagueTablePosition"
+            },
+            "nullable": true
           }
         },
         "additionalProperties": false,
         "description": "Contains display data for the registered device, including the display type and any relevant information about the targets being displayed."
+      },
+      "Fawkes.Api.Controllers.DisplayController.DisplayTheme": {
+        "enum": [
+          "Light",
+          "Dark"
+        ],
+        "type": "string"
       },
       "Fawkes.Api.Controllers.DisplayController.DisplayType": {
         "enum": [
@@ -1864,6 +1902,36 @@
           "Table"
         ],
         "type": "string"
+      },
+      "Fawkes.Api.Controllers.DisplayController.LeagueTablePosition": {
+        "type": "object",
+        "properties": {
+          "position": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "teamName": {
+            "type": "string",
+            "nullable": true
+          },
+          "setPointsWon": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "setPointsLost": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "matchPointsWon": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "matchPointsLost": {
+            "type": "integer",
+            "format": "int32"
+          }
+        },
+        "additionalProperties": false
       },
       "Fawkes.Api.Controllers.DisplayController.TargetDisplayData": {
         "type": "object",
